# validation-fabric

./: .gitignore  .validation-fabric.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: admit.yml  ci.yml  merge.yml  release.yml  validate.yml
docs/: configuration.md  events.md  migration.md  releasing.md  security-model.md  threat-model.md  troubleshooting.md
examples/github/: validation-fabric-admission.yml  validation-fabric.yml
examples/go/: .validation-fabric.yml  add.go  go.mod
examples/node/: .validation-fabric.yml  package-lock.json  package.json
examples/node/test/: add.test.js
examples/polyglot/: .validation-fabric.yml
examples/polyglot/backend/tests/: test_app.py
examples/polyglot/edge/: add_test.go  go.mod
examples/polyglot/web/: package-lock.json  package.json
examples/python/: .validation-fabric.yml  pyproject.toml
examples/python/tests/: test_fixture.py
src/validation_fabric/: __init__.py  certificates.py  cli.py  config.py  core.py  events.py  github.py  impact.py  merge.py
tests/: test_certificates.py  test_cli.py  test_config.py  test_core.py  test_events.py  test_fixture_acceptance.py  test_github.py  test_impact.py  test_merge.py  test_workflow_contracts.py
tools/: run_fixture.py
