[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "validation-fabric-python-fixture"
version = "0.0.0"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools]
py-modules = ["fixture"]
package-dir = {"" = "src"}
